added unoserver docker container

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Directory Picker</title>
+    <title>UniDocBuilder</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <!-- Include Font Awesome CSS -->
     <link
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div>
-      <h1>Electron Directory Picker</h1>
+      <h1>UniDocBuilder</h1>
       <form id="directoryForm">
         <div class="form-row">
           <label for="sourceDirectory">Source Directory:</label>
@@ -61,5 +61,6 @@
     <!-- <script src="./ui.js"></script> -->
     <script src="./formValidation.js"></script>
     <script src="genFileSystem.js"></script>
+    <script src="updates.js"></script>
   </body>
 </html>
